[gd_scene load_steps=19 format=2]

[ext_resource path="res://boids/GridMultiMesh.gd" type="Script" id=1]
[ext_resource path="res://boids/BoidsParticles.gd" type="Script" id=2]
[ext_resource path="res://boids/BoidsSpec.gd" type="Script" id=3]
[ext_resource path="res://boids/radial_gradient.png" type="Texture" id=4]
[ext_resource path="res://boids/CopyShader.gdshader" type="Shader" id=5]
[ext_resource path="res://boids/GridShader.gdshader" type="Shader" id=6]
[ext_resource path="res://boids/BoidsShader.gdshader" type="Shader" id=7]
[ext_resource path="res://boids/BoidsGrid.gd" type="Script" id=8]
[ext_resource path="res://boids/BoidsProcessor.gd" type="Script" id=9]
[ext_resource path="res://boids/BoidsInstance.gd" type="Script" id=10]

[sub_resource type="Resource" id=23]
script = ExtResource( 3 )
world_size = Vector2( 400, 400 )
velocity_min = 80.0
velocity_max = 100.0
grid_resolution = 2.0
boids_capacity = 16384
boids_size = 2.0
boids_vision = 10.0
rule_cohesion = 50.0
rule_seperation = 200.0
rule_alignment = 1.0
rule_target = 10.0
rule_colision = 100.0
grid_power = 1.5
seperation_power = 1.5

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/grid_size = null
shader_param/world_size = null
shader_param/vision_size_factor = null
shader_param/grid_power = null

[sub_resource type="QuadMesh" id=2]
size = Vector2( 32, 32 )

[sub_resource type="MultiMesh" id=3]
custom_data_format = 2
mesh = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/world_size = null
shader_param/grid_size = null
shader_param/delta_time = 0.0
shader_param/boids_vision = null
shader_param/boids_size = null
shader_param/seperation_power = null
shader_param/rule_seperation = 100.0
shader_param/rule_cohesion = 5.0
shader_param/rule_alignment = 0.5
shader_param/rule_target = 1.0
shader_param/rule_collision = 1000.0
shader_param/target = Vector3( 0, 0, 0 )
shader_param/velocity_min = 20.0
shader_param/velocity_max = 50.0

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;
render_mode blend_add, blend_premul_alpha;
"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 5 )

[node name="BoidsInstance" type="Node"]
script = ExtResource( 10 )
boids_spec = SubResource( 23 )

[node name="BoidsGrid" type="Viewport" parent="."]
size = Vector2( 8, 8 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 1
render_target_clear_mode = 1
render_target_update_mode = 3
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="BoidsGrid"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="GridMultiMesh" type="MultiMeshInstance2D" parent="BoidsGrid"]
material = SubResource( 7 )
multimesh = SubResource( 3 )
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="BoidsParticles" type="Viewport" parent="."]
size = Vector2( 2, 2 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 1
render_target_update_mode = 3
script = ExtResource( 2 )

[node name="BoidsProcesor" type="Sprite" parent="BoidsParticles"]
material = SubResource( 14 )
centered = false
script = ExtResource( 9 )

[node name="Cursor" type="Sprite" parent="BoidsParticles"]
material = SubResource( 11 )
centered = false

[node name="Copy" type="Viewport" parent="."]
size = Vector2( 2, 2 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 1
render_target_update_mode = 3

[node name="BoidsTexture" type="Sprite" parent="Copy"]
material = SubResource( 13 )
centered = false

[connection signal="boids_count_changed" from="." to="BoidsGrid/GridMultiMesh" method="_on_BoidsInstance_boids_count_changed"]
[connection signal="boids_count_changed" from="BoidsParticles" to="." method="_on_BoidsParticles_boids_count_changed"]
